Further tidying up of nb structure

--- a/notebooks/visualisations/01_bar_chart_raw.ipynb
+++ b/notebooks/visualisations/01_bar_chart_raw.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in displaying the frequency of each score awarded by customers of two tattoo removal procedures.\n",
-    "The sample shows the information on 55 customers, including the method of removal, the customer's gender, the size of the tattoo, the depth of the tatto, and the score awarded by the customer.\n",
+    "This report is interested in displaying the distribution of the satisfaction scores awarded by people who underwent tattoo removal as a bar chart.\n",
+    "The data contains 55 observations of people who underwent tattoo removal, with information on the method of removal, the customer's gender, the size of the tattoo, the depth of the tattoo, and the score awarded by the customer.\n",
     "The data is provided by the Open University *(activity 4, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
@@ -31,10 +31,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as a frequency bar chart.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Method**, `str` : removal method of tattoo\n",
+    "\n",
+    "**Gender**, `str` : gender of person undergoing the procedure\n",
+    "\n",
+    "**Size**, `str` : size of the tattoo\n",
+    "\n",
+    "**Depth**, `str` : depth of the tattoo\n",
+    "\n",
+    "**Score**, `int` : statisfaction score with procedure"
    ]
   },
   {
