--- a/notebooks/visualisations/02_bar_chart_summarised.ipynb
+++ b/notebooks/visualisations/02_bar_chart_summarised.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The aim of the notebook is to plot a sample of aggregated data as a bar chart.\n",
+    "The aim of the notebook was to plot a sample of aggregated data as a bar chart.\n",
     "The data was plotted twice: the first time unsorted, the second time sorted by descending order."
    ]
   },
@@ -24,7 +24,7 @@
     "## Introduction\n",
     "\n",
     "This analysis is interested in displaying the total numbers of workers in a selection of occupation-types as a frequency bar chart.\n",
-    "The sample shows the number of workers in each of the 9 occupartion types, with figures showing the number for each gender, as well as the total numbers.\n",
+    "The data shows the number of workers in each of the 9 occupation-types, with values for the number (in unit millions) working of each gender, as well as the total numbers.\n",
     "The data is provided by the Open University *(activity 6, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
@@ -32,10 +32,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as a frequency bar chart twice: Once with the columns unsorted, and again with the columns sorted by descending order.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Occupation type**, `str` : descriptive label of the occupation type\n",
+    "\n",
+    "**Male**, `float` : number of male workers (millions)\n",
+    "\n",
+    "**Female**, `float` : number of female workers (millions)\n",
+    "\n",
+    "**Total**, `float` : total number of workers (millions)"
    ]
   },
   {
