--- a/notebooks/visualisations/03_freq_hist.ipynb
+++ b/notebooks/visualisations/03_freq_hist.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The aim of the notebook is to plot a sample of data as a frequency histogram.\n",
+    "The aim of the notebook is to plot some data as a frequency histogram.\n",
     "The sample is plotted twice: once using the default bin width, and second by defining our own bin width."
    ]
   },
@@ -23,8 +23,8 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in displaying the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England.\n",
-    "The sample shows the percentages of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
+    "This report aims to output the distribution of the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England as a frequency histogram.\n",
+    "The data contains information on the percentage of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
     "The data is provided by the Open University *(activity 8, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
@@ -32,10 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as two frequency histograms: once using the default bin width, and second by defining our own bin width.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Percentage**, `float` : percentage of adults who are members of a local sports club"
    ]
   },
   {
@@ -162,7 +161,7 @@
    "source": [
     "### Visualise the data\n",
     "\n",
-    "Note the paramater `edgecolor=\"none\"` remove the borders of each bar."
+    "Note, the paramater `edgecolor=\"none\"` remove the borders of each bar."
    ]
   },
   {
