--- a/notebooks/visualisations/04_boxplot.ipynb
+++ b/notebooks/visualisations/04_boxplot.ipynb
@@ -23,8 +23,8 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in displaying the distribution of the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England.\n",
-    "The sample shows the percentages of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
+    "This report is concerned with displaying the distribution of the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England as a boxplot.\n",
+    "The data shows the percentages of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
     "The data is provided by the Open University *(activity 11, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
@@ -32,10 +32,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as two boxplots: once horizontally, and again horizontally.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Percentage**, `float`\n",
+    ": pecentage of adults who are members of a local sports club"
    ]
   },
   {
