--- a/notebooks/visualisations/05_side_by-side_bar_chart.ipynb
+++ b/notebooks/visualisations/05_side_by-side_bar_chart.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in comparing the frequency of each score awarded by customers with either a deep or moderately-deep tattoo of two tattoo removal procedures as a side-by-side bar chart.\n",
+    "This analysis is interested in comparing the distributions of the satisfaction scores of customers who had a deep tattoo removed, and those that had a moderately deep tattoo as a side-by-side bar chart.\n",
     "The sample shows the information on 55 customers, including the method of removal, the customer's gender, the size of the tattoo, the depth of the tatto, and the score awarded by the customer.\n",
     "The data is provided by the Open University *(activity 16, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
@@ -31,10 +31,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as a side-by-side bar chart.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Method**, `str` : removal method of tattoo\n",
+    "\n",
+    "**Gender**, `str` : gender of person undergoing the procedure\n",
+    "\n",
+    "**Size**, `str` : size of the tattoo\n",
+    "\n",
+    "**Depth**, `str` : depth of the tattoo\n",
+    "\n",
+    "**Score**, `int` : statisfaction score with procedure"
    ]
   },
   {
@@ -91,18 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare new parameters holding references each depth of tattoo\n",
+    "# filter df on each depth of tattoo\n",
     "deep = df_tattoos.query('Depth == \"deep\"')\n",
     "mod = df_tattoos.query('Depth == \"mod\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +164,7 @@
        "Score   28.0  2.035714  1.070899  1.0  1.0  2.0  3.0  4.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +230,7 @@
        "Score   27.0  3.037037  1.055443  1.0  2.0  3.0  4.0  4.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
