--- a/notebooks/visualisations/06_unit_area_hist.ipynb
+++ b/notebooks/visualisations/06_unit_area_hist.ipynb
@@ -22,19 +22,18 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in displaying the distribution of the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England.\n",
-    "The sample shows the percentages of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
-    "The data is provided by the Open University *(activity 17, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
+    "This report aims to output the distribution of the percentage of adults who are members of sports clubs in the 49 sports partnerships areas of England as a unit-area histogram.\n",
+    "The data contains information on the percentage of adults who are members of a local sports club in each of the 49 sports partnerships areas of England.\n",
+    "The data is provided by the Open University *(activity 8, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The data was displayed as a unit-area histogram.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Percentage**, `float` : percentage of adults who are members of a local sports club"
    ]
   },
   {
