--- a/notebooks/visualisations/07_comparative_boxplots.ipynb
+++ b/notebooks/visualisations/07_comparative_boxplots.ipynb
@@ -22,19 +22,24 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This analysis is interested in comparing the weight-loss of the control and treatment groups of a trial in response-inhibition training.\n",
+    "This analysis is interested in comparing the weight-loss of the control and treatment groups of a trial in a weight-loss clinical trial.\n",
     "The sample shows the weight loss of 83 participants of the trial, including their group and gender.\n",
-    "The data is provided by the Open University *(activity 17, Computer Book A, M248: Analysing data),* who in turn took it from Lawrence, N.S. et al. (2015)."
+    "The data is provided by the Open University *(activity 19, Computer Book A, M248: Analysing data),* who in turn took it from Lawrence, N.S. et al. (2015)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The samples were compared using comparative boxplots.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**ID**, `int` : unique identifier of the participant\n",
+    "\n",
+    "**Group**, `int` : {0: Control, 1: Treatment}\n",
+    "\n",
+    "**Gender**, `int` : gender of partcipant (Note, not told how the values are paired with the genders)\n",
+    "\n",
+    "**Weight change**, `float` : weight-change of partipant (in kilograms)"
    ]
   },
   {
@@ -111,96 +116,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Group</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Weight change</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Treatment</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Treatment</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Treatment</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Control</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Treatment</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ID      Group  Gender  Weight change\n",
-       "0   1  Treatment       1           -0.6\n",
-       "1   2  Treatment       1            1.0\n",
-       "2   3  Treatment       1            0.2\n",
-       "3   4    Control       1            0.8\n",
-       "4   5  Treatment       1           -1.9"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_response.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# declare new parameters holding references to each group\n",
@@ -210,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +180,7 @@
        "Weight change   40.0 -0.67  1.70823 -7.0 -1.5 -0.55  0.2  3.6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +246,7 @@
        "Weight change   41.0  0.170732  1.2013 -3.2 -0.7  0.1  1.0  2.7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
