--- a/notebooks/visualisations/08_scatter.ipynb
+++ b/notebooks/visualisations/08_scatter.ipynb
@@ -23,7 +23,7 @@
     "## Introduction\n",
     "\n",
     "This analysis is interested in visualising the relationship between road distance and actual distance of twenty locations in Sheffield.\n",
-    "The sample shows the distance between some location in Sheffield (an origin) and twenty other locations in Sheffield, both if travelled by following the road and a straight-line distance.\n",
+    "The data contains 20 paired values showing the distance between some location in Sheffield (an origin) and another location. One value shows the distance between the two locations if travelled by road; the second the distance if travelling in a straight-line.\n",
     "The data is provided by the Open University *(activity 23, Computer Book A, M248: Analysing data),* who do not provide a reference for their source."
    ]
   },
@@ -31,10 +31,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method\n",
+    "## About the data\n",
     "\n",
-    "The paired data was visualised as a scatterplot.\n",
-    "The visualisation was done using `Python` using the `pandas`, `seaborn`, and `matplotlib` packages."
+    "**Road**, `float` : Distance between location and the origin if travelled by road\n",
+    "\n",
+    "**Map**, `float` : Distance between location and the origin if travelled in a straight-line"
    ]
   },
   {
